--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@ style='mso-ansi-language:#0C00'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=ru-UA
 style='font-size:24.0pt;line-height:105%;color:#2F5597;mso-ansi-language:#0C00'><a
-href="https://www.лечениенаркомании.com/"><span style='color:#2F5597;text-decoration:
+href="https://xn--80aanaardaperhcem4a6i.com/"><span style='color:#2F5597;text-decoration:
 none;text-underline:none'>Наш</span><span style='color:#2F5597;mso-ansi-language:
 RU;text-decoration:none;text-underline:none'> </span><span style='color:#2F5597;
 text-decoration:none;text-underline:none'>сайт</span></a></span><span lang=RU
